src/test/deca/context/valid/Modulo.deca
// Description:
//    test modulo
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2022

{
   int a=5;
   a=a%5;
   
   
}